--- a/index.html
+++ b/index.html
@@ -257,12 +257,47 @@ Once this has been accomplished go to the area which we will be adding map infor
 						<br><br>
 						Next, we are going to go to the _posts folder on the main page and delete 2018-02-24-boulevardier.md as it will be unnecessary for this map. You can also go to the images folder and delete the two boulevardier.jpg images.
 						<br><br>
-						Note: if you delete everything within a folder it deletes the folder with it. To remedy this or to create a new folder click the “create new file” button and in the name put the name of your new folder with a / after it so that it looks like flaneur/folder/ and then add a test document like test.txt. You will eventually remove this test document for other documents but keep it in until you do that lest you accidently delete the folder again.
+						Note: If you delete everything within a folder it deletes the folder with it. To remedy this or to create a new folder click the “create new file” button and in the name put the name of your new folder with a / after it so that it looks like flaneur/folder/ and then add a test document like test.txt. You will eventually remove this test document for other documents but keep it in until you do that lest you accidently delete the folder again.
 						</p>
 					</section>
-					<section><p>Flaneur continued</p></section>
-					<section><p>Flaneur continued</p></section>
-					<section><p>Flaneur continued</p></section>
+					<section><p>Flaneur continued</p>
+					<p style="font-size:30px;">
+						Go to the _configure.yml link and click on the edit button.
+						<br>
+						Below you will see the line called “Map Settings” here you will change two things.
+						<br>
+						The first is the link, which you can find the correct one by going to your mapbox studio, clicking on share at the top right, and copying one of the two links that are provided to you.
+						<br>
+						Paste that link into the GitHub line.
+						<br>
+						Next you are going to change the latitude and longitude in the set view as it is currently set on Paris, France. You can use whatever lat/long you would like.
+						</p>
+					</section>
+					<section><p>Flaneur continued</p>
+					<p style="font-size:30px;">
+						From here we will begin putting in our information/linking things to the map so that when we click on them they open up a window. We will first put our pictures within GitHub.
+						<br>
+						Go to the images folder and create a folder for the images that you wish to display within the website.
+						<br>
+						Note: These images must be in .jpg or .jpeg form or else they will not be displayed. .pdf files can be uploaded to the Github, but only if you wish to use them as downloads rather than as displayed images.
+						</p>
+					</section>
+					<section><p>Flaneur continued</p>
+					<p style="font-size:30px;">
+						From here we will begin to create our webpages for the individual maps.
+						<br>
+						In the _posts folder we will begin to create a new webpage.
+						<br>
+						Create a new file and title it by year-month-day-title.md for instance my South LA page was titled 2020-02-28-southla1991.md.
+						<br>
+						Go back to the initial _posts folder and go to the _ post_template.md page.
+						<br>
+						Within this click on the “Edit this file” button so that it shows you the base text format for the webpage. Copy this and paste it into your year-month-day-title.md text line.
+						<br>
+						Edit what is necessary, for the South LA webpage I ended up with this:
+						</p>
+						<img src="img/Syntax.png" alt="" class="center" width="350px" height="250"/>
+					</section>
 					<section><p>Flaneur continued</p></section>
 				</section>
 				<section><p>Additional</p></section>
