--- a/index.html
+++ b/index.html
@@ -298,7 +298,21 @@ Once this has been accomplished go to the area which we will be adding map infor
 						</p>
 						<img src="img/Syntax.png" alt="" class="center" width="350px" height="250"/>
 					</section>
-					<section><p>Flaneur continued</p></section>
+					<section><p>Flaneur continued</p>
+						<p style="font-size:30px;">
+							Below this you will put in the information that you wish to show on the webpage.
+					<br>
+							For the 1991 LA City Plans website we wanted to show the key to the map, the pages from the packet, and a link to download the full file.
+					<br>
+							The syntax can be found in the _post_template.md file but I will go over each line to showcase what does what. Below is the syntax for showing the Key and to download the full file.
+						</p>
+						<img src="img/Syntax2.png" alt="" class="center" width="350" height="150"/>
+					</section>
+					<section><p>Flaneur continued</p>
+						<p style="font-size:30px;"> For the rest of the images I used bare bones programming to showcase the pictures and a small caption only, it looks like this:</p>
+						<img src="img/Programming.png" alt="" class="center" width="200" height="350"/>
+						<p style="font-size:30px;">Make sure that the image names match the names in the image folder.</p>
+					</section>
 				</section>
 				<section><p>Additional</p></section>
 				<section><p>Thank you</p></section>
