--- a/index.html
+++ b/index.html
@@ -314,7 +314,18 @@ Once this has been accomplished go to the area which we will be adding map infor
 						<p style="font-size:30px;">Make sure that the image names match the names in the image folder.</p>
 					</section>
 				</section>
-				<section><p>Additional</p></section>
+				<section><p>Additional</p>
+				<p style="font-size:30px;">
+					An addition thing that you can do if you wish is include a map as a reference point.
+					<br>
+					To do this you will create a new map within Mapbox which is just a plain file.
+					<br>
+					You will also create an .md file on the main page of the GitHub repository.
+					<br>
+					Within the text editor edit it so that when finished it looks like this:
+					</p>
+					<img src="img/Additional.png" alt="" class="center" width="350" height="150"/>
+				</section>
 				<section><p>Thank you</p></section>
 			</div>
 		</div>
