--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<section>
 					<p>Goals of this workshop</p>
 					<p style="font-size:30px;">By the end of the program we will have something like this:</p>
-					<a href="url"> https://visualizela.github.io/flaneur/</a>
+					<a href="url" "font-size:30px;"> https://visualizela.github.io/flaneur/</a>
 					<img src="img/BoyleHeights.png" alt="" class="center" width="600px" height="400"/>
 				</section>									
 				<section>
@@ -65,10 +65,10 @@
 				</section>
 				<section>
 					<p>Further links</p>
-					<a href="url"> https://www.blogs.hss.ed.ac.uk/tools-of-the-trade/use-gis-humanities-social-sciences/</a>
-					<br><a href="url"> https://libguides.wustl.edu/c.php?g=46935&p=4435069</a>
-					<br><a href="url"> https://gis.usc.edu/blog/the-application-of-geographic-and-information-science-gis-in-earth-sciences/</a>
-					<br><a href="url"> https://www.gisforscience.com/</a>
+					<a href="url""font-size:30px;"> https://www.blogs.hss.ed.ac.uk/tools-of-the-trade/use-gis-humanities-social-sciences/</a>
+					<br><a href="url""font-size:30px;"> https://libguides.wustl.edu/c.php?g=46935&p=4435069</a>
+					<br><a href="url""font-size:30px;"> https://gis.usc.edu/blog/the-application-of-geographic-and-information-science-gis-in-earth-sciences/</a>
+					<br><a href="url""font-size:30px;"> https://www.gisforscience.com/</a>
 				</section>
 				<section>
 					<p>Why QGIS</p>
@@ -88,7 +88,7 @@
 					<p>What you will need</p>
 					<p style="font-size:30px;">QGIS version 3.10 or 3.12 which can be downloaded at qgis.org</p>
 						<p style="font-size:20px;">3.10 is the most stable while 3.12 has more features, both work for this particular workshop.</p>
-					<p style="font-size:30px;">Folder:</p>
+					<br><p>Folder:</p>
 						<p style="font-size:20px;">Features a file titled Map.tiff and Key.jpeg. These will be the materials that we will work with. They have been digitized at 600 dpi (dots per inch) at the VKC library.</p>
 				</section>
 				<section>
@@ -142,7 +142,7 @@
 						Simply click on the area that closely corresponds to the image area you clicked and that will connect the .tiff to the map.<br>
 						You must do this at least six times for the georeference to work, the more points you put in the more accurate the georeference.
 						</p>
-						<img src="img/Georeference4.png" alt="" class="center" width="550px" height="550"/>
+						<img src="img/Georeference4.png" alt="" class="center" width="550px" height="450"/>
 					</section>
 					<section>
 						<p>Georeferencing</p>
