--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<section>
 					<p>Goals of this workshop</p>
 					<p style="font-size:30px;">By the end of the program we will have something like this:</p>
-					<a href="url" "font-size:30px;"> https://visualizela.github.io/flaneur/</a>
+					<a href="url""font-size:30px;"> https://visualizela.github.io/flaneur/</a>
 					<img src="img/BoyleHeights.png" alt="" class="center" width="600px" height="400"/>
 				</section>									
 				<section>
@@ -88,7 +88,7 @@
 					<p>What you will need</p>
 					<p style="font-size:30px;">QGIS version 3.10 or 3.12 which can be downloaded at qgis.org</p>
 						<p style="font-size:20px;">3.10 is the most stable while 3.12 has more features, both work for this particular workshop.</p>
-					<br><p>Folder:</p>
+					<br><p style="font-size:40px;">Folder:</p>
 						<p style="font-size:20px;">Features a file titled Map.tiff and Key.jpeg. These will be the materials that we will work with. They have been digitized at 600 dpi (dots per inch) at the VKC library.</p>
 				</section>
 				<section>
@@ -182,11 +182,11 @@
 						Online version control that uses Git.<br>
 						It allows you to host projects and uses Git to track the files.<br>
 					</p>
-					<img src="img/Github.png" alt="" class="center" width="300px" height="400"/>
+					<img src="img/Github.png" alt="" class="center" width="400px" height="400"/>
 				</section>
 				<section>
 					<p>Make a GitHub repository</p>
-					<img src="img/Repo.jpg" alt="" class="center" width="500px" height="200"/>
+					<img src="img/Repo.jpg" alt="" class="center" width="550px" height="150"/>
 					<p style="font-size:45px;"> Open an account and click the plus symbol at the top right.</p>
 				</section>
 				<section>
@@ -201,7 +201,7 @@
 				</section>
 				<section>
 					<p>QGIS to GitHub</p>
-					<p>my internship advisor for the past two quarters </p>
+					<p>You can follow the tutorial below if you wish to just upload the map to a GitHub website without any additional data.</p>
 					<br>
 					<a href="url"> https://maptimela.github.io/map-website/</a>
 				</section>
@@ -228,7 +228,7 @@ Once this has been accomplished go to the area which we will be adding map infor
 					<br>
 					Once this is complete click the blue “Publish” button on the top right.
 						<br></p>
-					<img src="img/Layers2.png" alt="" class="center" width="200px" height="350"/>
+					<img src="img/Layers2.png" alt="" class="center" width="250px" height="350"/>
 				</section>
 				<section>
 					<section><p>Flaneur</p>
@@ -324,7 +324,7 @@ Once this has been accomplished go to the area which we will be adding map infor
 					<br>
 					Within the text editor edit it so that when finished it looks like this:
 					</p>
-					<img src="img/Additional.png" alt="" class="center" width="350" height="150"/>
+					<img src="img/Additional.png" alt="" class="center" width="450" height="250"/>
 				</section>
 				<section><p>Thank you</p></section>
 			</div>
