--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
 				</section>
 				<section>
 					<p>Before using QGIS: Check your images</p>
+					<p style="font-size:20px;">
+					This is an additional step (given that the maps provided have been edited down, but once you have digitized your maps make sure that you crop/edit them to remove unnecessary whitespace unless you want that to show up in the finished map.
+					<br>
+					You can do this via photo editing software.
+					</p>
+					<img src="img/Map.png" alt="" class="center" width="400px" height="400"/>
 				</section>
 				<section>
 					<p>Before using QGIS: Make sure you have the right repository</p>
